syntax = "proto3";
package rustica;

message ChallengeRequest {
    string pubkey = 1;
}

message ChallengeResponse {
    string time = 1;
    string challenge = 2;
}

message Challenge {
    string pubkey = 1;
    string challenge = 2;
    string challenge_signature = 3;
    string challenge_time = 4;
}

message CertificateRequest {
    uint32 cert_type = 1;
    string key_id = 2;
    repeated string principals = 3;
    repeated string servers = 4;
    map<string, string> extensions = 5;
    map<string, string> critical_options = 6;
    uint64 valid_after = 7;
    uint64 valid_before = 8;
    Challenge challenge = 9;
}

message CertificateResponse {
    string certificate = 1;
    string error = 2;
    int64 error_code = 3;
}

message RegisterKeyRequest {
    string certificate = 1;
    string intermediate = 2;
    Challenge challenge = 3;
}

message RegisterKeyResponse {}

service Rustica {
    rpc Challenge(ChallengeRequest) returns (ChallengeResponse);
    rpc Certificate(CertificateRequest) returns (CertificateResponse);
    rpc RegisterKey(RegisterKeyRequest) returns (RegisterKeyResponse);
}